# TIG_Calc

./: pyproject.toml
calculator/: parse.py  types.py
