[tool.poetry]
name = "TIG Calc"
version = "0.1.0"
description = "A powerful calculator built with Python"
authors = ["replit.com@lightningrock2"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"